# Step-Functions

./: .gitlab-ci.yml  README.md
counting_occurrences/: Cargo.toml  input2.json
counting_occurrences/src/: main.rs
frequent-words/: Cargo.toml  input.json
frequent-words/src/: main.rs
longest_word_identification/: Cargo.toml  input.json
longest_word_identification/src/: main.rs
word-frequency/: Cargo.toml  input.json
word-frequency/src/: main.rs
