[package]
name = "counting_occurrences"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_runtime = "0.11.1"
tokio = { version = "1", features = ["macros"] }
serde = "1.0.136"
log = "0.4"
simple_logger = "1.0"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt"] }